--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@ main hr{
                 <li>JAVASCRIPT<br><img src="js.png" height="80px" width="80px" alt=""></li>
                 <li>BOOTSTRAP<br><img src="bs.png" height="80px" width="80px" alt=""></li>
             </ul></i>
-        
-
-           </section>
+         </section><hr>
     </main>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
